--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
-    "angular-material": "^1.1.1"
+    "angular-jwt": "^0.1.5",
+    "angular-lock": "^1.0.2",
+    "angular-material": "^1.1.1",
+    "auth0-angular": "^4.2.5"
   }
 }
